--- a/preview.yaml
+++ b/preview.yaml
@@ -1626,6 +1626,14 @@ voice_assistant:
     # Start a script that would potentially enable the stop word if the response is longer than a second
     - script.execute: activate_stop_word_if_tts_step_is_long
   # When the voice assistant ends ...
+  on_tts_end:
+    - homeassistant.service:
+        service: media_player.play_media
+        data:
+          entity_id: media_player.kitchen_speaker
+          media_content_id: !lambda 'return x;'
+          media_content_type: music
+          announce: "true"  
   on_end:
     - wait_until:
         not:
