--- a/preview.yaml
+++ b/preview.yaml
@@ -1630,7 +1630,7 @@ voice_assistant:
     - homeassistant.service:
         service: media_player.play_media
         data:
-          entity_id: media_player.kitchen_speaker
+          entity_id: media_player.nest_kitchen_speaker
           media_content_id: !lambda 'return x;'
           media_content_type: music
           announce: "true"  
